syntax = "proto3";

package model;

option go_package = "7-grpc/model";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message Todo{
    int32 id = 1;
    string name = 2;
}

message ListTodo{
    repeated Todo list = 1;
}

message InputTodoID{
    int32 id = 1;
}

service Todos{
    rpc CreateTodo(Todo) returns (google.protobuf.Empty){
        option (google.api.http) = {
            post : "/todos",
            body : "*",
          };
    }
    rpc GetTodos(google.protobuf.Empty) returns (ListTodo){
        option (google.api.http) = {
            get : "/todos",
          };
    }
    rpc GetByID(InputTodoID) returns (Todo) {
        option (google.api.http) = {
            get : "/todos/{id}",
          };
    }
    rpc UpdateTodo(Todo) returns (Todo){
        option (google.api.http) = {
            put : "/todos/{id}",
            body : "*",
          };
    }
    rpc DeleteTodo(InputTodoID) returns (google.protobuf.Empty){
        option (google.api.http) = {
            delete : "/todos/{id}",
          };
    }
}